--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.1",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
